# networking-bigswitch

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  LIMITATIONS.rst  MANIFEST.in  README.rst  TESTING.rst  groups  manage.py  project.config  py34-upper-constratints.txt  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
bsnstacklib/bsnlldp/: bsnlldp.py  rhlib.py  send_lldp.py
bsnstacklib/db/migration/: cli.py
bsnstacklib/db/migration/alembic_migrations/: __init__.py  env.py
bsnstacklib/plugins/bigswitch/: bsn_service_plugin.py  config.py  l3_router_plugin.py  plugin.py  routerrule_db.py  servermanager.py  version.py
bsnstacklib/plugins/bigswitch/agent/: restproxy_agent.py
bsnstacklib/plugins/bigswitch/db/: consistency_db.py  namecache_db.py  network_template_db.py  porttracker_db.py  reachability_test_db.py  routerrule_db.py  staticroute_db.py
bsnstacklib/plugins/bigswitch/db/migration/: cli.py
bsnstacklib/plugins/bigswitch/db/migration/alembic_migrations/: env.py
bsnstacklib/plugins/bigswitch/db/migration/alembic_migrations/versions/: 1086543dfc0f_update_column_type_for_testpath_result.py  1ef57200f387_testpath_modify_uniq_constraint.py  34f888285695_support_multiple_logical_routers.py  8021eac0d18_add_base_bsn_plugin.py  9af480b97ce4_add_route_nexthop.py  HEAD  e6cb930d25de_add_bsn_namecache.py  kilo_add_base_bsn_plugin.py
bsnstacklib/plugins/bigswitch/db/migration/models/: head.py
bsnstacklib/plugins/bigswitch/db/models/: head.py
bsnstacklib/plugins/bigswitch/extensions/: bsnserviceextension.py  routerrule.py  staticroute.py
bsnstacklib/plugins/bigswitch/neutronclient/v2_0/: _bsn_plugin_client.py
bsnstacklib/plugins/bigswitch/tests/: test_server.py
bsnstacklib/plugins/ml2/drivers/mech_bigswitch/: driver.py
bsnstacklib/tests/functional/db/: test_migrations.py
bsnstacklib/tests/unit/bigswitch/: fake_server.py  test_agent_scheduler.py  test_base.py  test_capabilities.py  test_networktemplate_db.py  test_networktemplateassignment_db.py  test_reachabilityquicktest_db.py  test_reachabilitytest_db.py  test_restproxy_agent.py  test_restproxy_plugin.py  test_router_db.py  test_security_groups.py  test_servermanager.py  test_ssl.py
bsnstacklib/tests/unit/bigswitch/etc/: restproxy.ini.test
bsnstacklib/tests/unit/ml2/drivers/: test_bigswitch_mech.py
build_packages/: build-rhel-packages-inner.sh  build-rhel-packages.sh  is_version_bumped.py  openstack_networking_bigswitch.build  openstack_networking_bigswitch_beta.build  openstack_networking_bigswitch_tagged.build  precheckin.sh  update_wiki.py  upload_to_pypi.sh
etc/: policy.json
etc/neutron/plugins/bigswitch/: restproxy.ini
etc/neutron/policy.d/: bsn_plugin_policy.json
networking_bigswitch/: __init__.py
networking_bigswitch/bsnlldp/: bsnlldp.py  rhlib.py  send_lldp.py
networking_bigswitch/plugins/bigswitch/: bsn_service_plugin.py  config.py  constants.py  dhcp_driver.py  i18n.py  l3_router_plugin.py  plugin.py  routerrule_db.py  servermanager.py  state_syncer.py  utils.py  version.py
networking_bigswitch/plugins/bigswitch/agent/: restproxy_agent.py
networking_bigswitch/plugins/bigswitch/db/: consistency_db.py  network_template_db.py  porttracker_db.py  reachability_test_db.py  routerrule_db.py  tenant_policy_db.py
networking_bigswitch/plugins/bigswitch/db/migration/alembic_migrations/: env.py
networking_bigswitch/plugins/bigswitch/db/migration/alembic_migrations/versions/: 1086543dfc0f_update_column_type_for_testpath_result.py  1ef57200f387_testpath_modify_uniq_constraint.py  2dc6f1b7c0a1_testpath_add_column_logical_path.py  34f888285695_support_multiple_logical_routers.py  66cc6bc031de_tenant_policy_plugin.py  7db8cd315b95_clear_consistency_db.py  938c3e0e2029_add_tenant_segment_id_for_reachability_.py  HEAD  f774eae87144_rename_tenant_to_project.py  kilo_add_base_bsn_plugin.py
networking_bigswitch/plugins/bigswitch/db/models/: head.py
networking_bigswitch/plugins/bigswitch/extensions/: bsnserviceextension.py  routerrule.py
networking_bigswitch/plugins/bigswitch/neutronclient/v2_0/: _bsn_plugin_client.py
networking_bigswitch/plugins/ml2/drivers/mech_bigswitch/: driver.py
networking_bigswitch/services/taas/service_drivers/: taas_bsn.py
networking_bigswitch/tests/functional/: requirements.txt
networking_bigswitch/tests/functional/db/: test_migrations.py
networking_bigswitch/tests/unit/: test_import.py  test_taas_bsn.py
networking_bigswitch/tests/unit/bigswitch/: fake_server.py  mock_paths.py  test_agent_scheduler.py  test_base.py  test_capabilities.py  test_networktemplate_db.py  test_networktemplateassignment_db.py  test_reachabilityquicktest_db.py  test_reachabilitytest_db.py  test_restproxy_agent.py  test_restproxy_plugin.py  test_router_db.py  test_security_groups.py  test_servermanager.py  test_ssl.py
networking_bigswitch/tests/unit/bigswitch/etc/: restproxy.ini.test
networking_bigswitch/tests/unit/ml2/drivers/: test_address_scope.py  test_bigswitch_mech.py
rhel/: Dockerfile  neutron-bsn-agent.service  neutron-bsn-lldp.service  python-networking-bigswitch.spec
tools/: bsnstacklib.spec  clean.sh
vif_plug_ivs/: exception.py  i18n.py  ivs.py  linux_net.py  privsep.py
