[metadata]
name = bsnstacklib
version = 2015.1.2
summary = Big Switch Networks Plugins for OpenStack Networking
description-file =
    README.rst
author = Big Switch Networks
author-email = support@bigswitch.com
home-page = http://www.bigswitch.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    bsnstacklib
data_files =
    etc/neutron/plugins/bigswitch =
        etc/neutron/plugins/bigswitch/restproxy.ini
    etc/neutron/plugins/bigswitch/ssl/ca_certs =
        etc/neutron/plugins/bigswitch/ssl/ca_certs/README
    etc/neutron/plugins/bigswitch/ssl/host_certs =
        etc/neutron/plugins/bigswitch/ssl/host_certs/README
    etc/neutron/plugins/ml2 =
        etc/neutron/plugins/bigswitch/restproxy.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook
    bsnstacklib.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-restproxy-agent = bsnstacklib.plugins.bigswitch.agent.restproxy_agent:main
# NOTE: the ones that start with 'bigswitch' are the old names from upstream.
neutron.ml2.mechanism_drivers =
    bsn_ml2 = bsnstacklib.plugins.ml2.drivers.mech_bigswitch.driver:BigSwitchMechanismDriver
    bigswitch = neutron.plugins.ml2.drivers.mech_bigswitch.driver:BigSwitchMechanismDriver
neutron.service_plugins =
    bsn_l3 = bsnstacklib.plugins.bigswitch.l3_router_plugin:L3RestProxy
    bigswitch_l3 = neutron.plugins.bigswitch.l3_router_plugin:L3RestProxy
neutron.core_plugins =
    bsn_core = bsnstacklib.plugins.bigswitch.plugin:NeutronRestProxyV2
    bigswitch = neutron.plugins.bigswitch.plugin:NeutronRestProxyV2

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron/locale/neutron.pot

[compile_catalog]
directory = neutron/locale
domain = neutron

[update_catalog]
domain = neutron
output_dir = neutron/locale
input_file = neutron/locale/neutron.pot

[wheel]
universal = 1
