[metadata]
name = networking-bigswitch
version = 8.40.10
summary = Big Switch Networks Plugins for OpenStack Networking
description-file =
    README.rst
author = Big Switch Networks
author-email = support@bigswitch.com
home-page = http://www.bigswitch.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
data_files =
    /etc/neutron/policy.d = etc/neutron/policy.d/*
packages =
    networking_bigswitch

[global]
setup-hooks =
    pbr.hooks.setup_hook
    networking_bigswitch.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-bsn-agent = networking_bigswitch.plugins.bigswitch.agent.restproxy_agent:main
    bsnlldp = networking_bigswitch.bsnlldp.bsnlldp:main
neutron.ml2.mechanism_drivers =
    bsn_ml2 = networking_bigswitch.plugins.ml2.drivers.mech_bigswitch.driver:BigSwitchMechanismDriver
neutron.service_plugins =
    bsn_l3 = networking_bigswitch.plugins.bigswitch.l3_router_plugin:L3RestProxy
    bsn_service_plugin = networking_bigswitch.plugins.bigswitch.bsn_service_plugin:BSNServicePlugin
neutron.db.alembic_migrations =
    bsn_extensions = networking_bigswitch.plugins.bigswitch.db.migration:alembic_migrations
neutronclient.extension =
    bsn_extensions = networking_bigswitch.plugins.bigswitch.neutronclient.v2_0._bsn_plugin_client

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron/locale/neutron.pot

[compile_catalog]
directory = neutron/locale
domain = neutron

[update_catalog]
domain = neutron
output_dir = neutron/locale
input_file = neutron/locale/neutron.pot

[wheel]
universal = 1
